--- a/inventory_api/.env
+++ b/inventory_api/.env
@@ -1,1 +1,8 @@
 DEBUG = True
+
+
+DB_NAME="inventory_db"
+DB_USER="inventory_user"
+DB_PASSWORD="inventory123"
+DB_HOST="127.0.0.1",
+DB_PORT="5434"
