--- a/inventory_api/.env
+++ b/inventory_api/.env
@@ -3,5 +3,5 @@ SECRET_KEY = 'django-insecure-x%kyxe)ekt%wabtkpjovnc0kx)n3j$yk-vu=m-ju6spf2*hm-c
 DB_NAME="inventory_db"
 DB_USER="inventory_user"
 DB_PASSWORD="inventory123"
-DB_HOST="127.0.0.1",
+DB_HOST="127.0.0.1"
 DB_PORT="5434"
